♻️ refactor: migrate logic to use cases
